Update Algorithms.java with improved algorithm method invocation, and move main method to own class

--- a/code/build.gradle
+++ b/code/build.gradle
@@ -3,4 +3,9 @@ plugins {
   id 'application'
 }
 
-mainClassName = 'Algorithms'
+mainClassName = 'Main'
+
+compileJava {
+  options.encoding = 'UTF-8'
+  options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
+}
